# bcpensionshackathon

./: .gitignore  README.md
control_plane/: README.md  SOLUTION.md  pyproject.toml
control_plane/cicd/: azure-pipelines.yml
control_plane/config/: cleanse_rule.yml  datasource.yml  dq_rule.yml  gold_model.yml  pbi_dataset.yml  security_policy.yml  source_object.yml  steps.yml
control_plane/deploy/: cp_auth.py  cp_bootstrap.py  cp_bundle.py  cp_common.py  cp_config.py  cp_connection.py  cp_deploy.py  cp_environment.py  cp_export_config.py  cp_folders.py  cp_manifest.py  cp_pipeline.py  cp_reset.py  cp_secrets.py  cp_security.py  cp_sqldb.py  cp_varlib.py  fabric_nb.py  manifest.yml  reorg.py
control_plane/docs/: BRONZE_VS_MIRRORING.docx  BRONZE_VS_MIRRORING.md  CICD.docx  CICD.md  DESIGN.docx  DESIGN.md  GOVERNANCE_SECURITY.docx  GOVERNANCE_SECURITY.md  RUNBOOK_statcan.md  WORKING_GUIDE.docx  WORKING_GUIDE.md  build_cicd_docx.py  build_docx.py  md_to_docx.py  portability-design.md
control_plane/environments/: dev.yml  prod.yml  uat.yml
control_plane/notebooks/: bronze_worker.py  cp_01_setup.py  cp_02_ingest_bronze.py  cp_03_build_silver.py  cp_04_build_gold.py  cp_09_orchestrate.py  cp_connection_builder.py  cp_framework.py  cp_log_fail.py  cp_plan.py  cp_seed_demo.py  dropbox_worker.py  gold_runner.py  metadata_worker.py  silver_worker.py  sq_dim_category.py  sq_dim_customer.py  sq_dim_product.py  sq_dim_subcategory.py  sq_dim_territory.py  sq_fact_sales_by_territory.py  sq_fact_sales_order.py  sq_voc_dim_plan.py  sq_voc_dim_question.py  sq_voc_dim_survey.py  (+2 more)
(+70 files in other folders)
